Create mash store and categories form

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -11,6 +11,10 @@
       "allowedCategories": [ "production" ]
     },
     {
+      "name": "pinia",
+      "allowedCategories": [ "production" ]
+    },
+    {
       "name": "postcss",
       "allowedCategories": [ "production" ]
     },
