Add font-awesome and update styling

--- a/apps/gelt-mash/package.json
+++ b/apps/gelt-mash/package.json
@@ -10,7 +10,11 @@
     },
     "dependencies": {
         "vue": "^3.4.31",
-        "pinia": "~2.1.7"
+        "pinia": "~2.1.7",
+        "@fortawesome/fontawesome-svg-core": "~6.6.0",
+        "@fortawesome/free-solid-svg-icons": "~6.6.0",
+        "@fortawesome/vue-fontawesome": "~3.0.8",
+        "@fortawesome/free-regular-svg-icons": "~6.6.0"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.5",
